@@ -1,10 +1,10 @@
 \newcommand{\dir}{num}
 
 \pagestyle{myheadings}
-\markright{GLIMMER 0.7 Numerics}
+\markright{GLIMMER {\glimmerver} Numerics}
 
 \begin{document}
-\title{GLIMMER 0.7 Numerics}
+\title{GLIMMER {\glimmerver} Numerics}
 \author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk} \and Ian Rutt\thanks{I.C.Rutt@bristol.ac.uk}}
 \maketitle
 \tableofcontents
