@@ -1,2 +1,2 @@
 SUBDIRS=figs gnu
-EXTRA_DIST = grid.tex isos.tex kinematics.tex num.tex temp.tex vert_velo.tex
+EXTRA_DIST = grid.tex isos.tex kinematics.tex num.tex temp.tex vert_velo.tex gthf.tex
