@@ -1,0 +1,48 @@
+\section{Geothermal Heat Flux}
+The heat flux accross the basal boundary depends on past temperature variations since temperature perturbations penetrate the bed rock if the ice is frozen to the ground. The heat equation for the bed rock layer is given by the diffusion equation
+\begin{equation}
+  \label{num.eq.diffu_rock}
+  \frac{\pd T}{\pd t} = \frac{k_{\text{rock}}}{\rho_{\text{rock}}c_{\text{rock}}}\nabla^2T=\frac{k_{\text{rock}}}{\rho_{\text{rock}}c_{\text{rock}}} 
+  \left(\frac{\pd^2 T}{\pd x^2}+\frac{\pd^2 T}{\pd y^2}+\frac{\pd^2 T}{\pd z^2}\right),
+\end{equation}
+where $k_{\text{rock}}$ is the thermal conductivity, $\rho_{\text{rock}}$ the density and $c_{\text{rock}}$ the specific heat capacity of the bed rock layer. The bed rock layer is heated from below by the geothermal heat flux. The lower boundary condition is then
+\begin{equation}
+  \left.\frac{\pd T}{\pd z}\right|_{z=H_{\text{rock}}}=\frac{G}{k_{\text{rock}}},
+\end{equation}
+where $G$ is the geothermal heat flux and $H_{\text{rock}}$ is the thickness of the bedrock layer. Lateral boundary conditions are given by
+\begin{equation}
+  \left.\frac{\pd T}{\pd x}\right|_{x=0} = \left.\frac{\pd T}{\pd x}\right|_{x=L_x} = \left.\frac{\pd T}{\pd y}\right|_{y=0} = \left.\frac{\pd T}{\pd y}\right|_{y=L_y} = 0.
+\end{equation}
+At the upper boundary, the heat flux of the rock layer has to be matched with the heat flux in the basal ice layer when the ice is frozen to the bed, i.e.
+\begin{equation}
+  \label{num.eq.gthf_bc}
+  k_{\text{rock}}\left.\frac{\pd T}{\pd z}\right|_{z=-0}=k_{\text{ice}}\left.\frac{\pd T}{\pd z}\right|_{z=+0}.
+\end{equation}
+Otherwise the temperature of the top bedrock layer is set to the surface temperature (if there is no ice) or the basal ice temperature (if there is ice)\footnote{I have also set the temperature to 2$^\circ$C if the surface is below sea--level. This is just a random value. I haven't looked into using something more sensible.}. Equation \eqref{num.eq.gthf_bc} is automatically fulfilled if we set the top bedrock temperature to the basal ice temperature \emph{everywhere} and then calculate the geothermal heat flux to be used as boundary condition for Equation \eqref{temp.eq.temp_z}.
+
+Initial conditions for the temperature field $T$ are found by applying the geothermal heat gradient to the surface temperatures:
+\begin{equation}
+  T(x,y,z)=T(x,y,0)+\frac{G}{k_{\text{rock}}}z.
+\end{equation}
+
+\subsection{Numerical Solution}
+The horizontal grid is described in Section \ref{num.sec.grid}. The vertical grid is irregular like the vertical grid of the ice sheet model. However, it is not scaled. Also for now, I have ignored topography or isostatic adjustment, i.e. the bedrock layer is assumed to be flat and constant.
+
+The horizontal second derivative in Equation \eqref{num.eq.diffu_rock} becomes using finite--differences
+\begin{equation}
+  \left.\frac{\pd^2T}{\pd x^2}\right|_{x_i,y_i,z_i} = T_{xx,i,j,k} = \frac{T_{i+1,j,k}-2T_{i,j,k}+T_{i-1,j,k}}{\Delta x}
+\end{equation}
+and similarly for $\pd^2T/\pd y^2$. The vertical second derivative $\pd^2T/\pd z^2$ is similar to Equation \eqref{temp.eq.dsigma2}:
+\begin{multline}
+  \left.\frac{\pd^2 T}{\pd z^2}\right|_{x_i,y_i,z_i} = T_{zz,i,j,k} = \frac{2T_{i,j,k-1}}{(z_k-z_{k-1})(z_{k+1}-z_{k-1})} - \frac{2T_{i,j,k}}{(z_{k+1}-z_k)(z_k-z_{k-1})}\\
+  + \frac{2T_{i,j,k+1}}{(z_{k+1}-z_k)(z_{k+1}-z_{k-1})}
+\end{multline}
+
+
+Using the Crank-Nicholson scheme, Equation \eqref{num.eq.diffu_rock} becomes
+\begin{equation}
+  \label{num.eq.diffu_rock_disc}
+  \frac{T_{i,j,k}^{t+1}-T_{i,j,k}^{t}}{\Delta t}=D\left\{\frac{T_{xx,i,j,k}^{t+1}+T_{xx,i,j,k}^{t}}2 + \frac{T_{yy,i,j,k}^{t+1}+T_{yy,i,j,k}^{t}}2 + \frac{T_{zz,i,j,k}^{t+1}+T_{zz,i,j,k}^{t}}2 \right\},
+\end{equation}
+with $D=k_{\text{rock}}/(\rho_{\text{rock}}c_{\text{rock}})$. Equation \eqref{num.eq.diffu_rock_disc} is solved by gathering all $T^{t+1}$ terms on the LHS and all other terms on the RHS. The index $(i,j,k)$ is linearised using $\iota = i+(j-1)N+(k-1)NM$. The resulting matrix system is solved using the same bi--conjugate gradient solver as for the ice thickness evolution.
+
