@@ -1,4 +1,5 @@
 This part describes the numerical implementation of GLIMMER in some detail. At the moment this description is very sparse and only covers the temperature solver. It is hoped that more parts will be added in the future.
 \input{\dir/kinematics.tex}
 \input{\dir/temp.tex}
+\input{\dir/gthf.tex}
 \input{\dir/isos.tex}
