@@ -44,6 +44,7 @@ Discretisation of $\pd^2T/\pd\sigma^2$ is slightly complicated because the verti
 \end{subequations}
 Finally, the terms of equation \eqref{temp.eq.d4} are rearranged:
 \begin{multline}
+  \label{temp.eq.dsigma2}
   \left.\frac{\pd^2 T}{\pd\sigma^2}\right|_{\sigma_k} = \frac{2T_{k-1}}{(\sigma_k-\sigma_{k-1})(\sigma_{k+1}-\sigma_{k-1})} - \frac{2T_k}{(\sigma_{k+1}-\sigma_k)(\sigma_k-\sigma_{k-1})}\\
   + \frac{2T_{k+1}}{(\sigma_{k+1}-\sigma_k)(\sigma_{k+1}-\sigma_{k-1})}
 \end{multline}
